Set up add to cart functionality

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <script src="js/JQuery.js"></script>
     <script src="js/lightslider.js"></script>
+    <script src="js/addToCart.js" defer></script>
 
 </head>
 <body>
@@ -68,7 +69,7 @@
                 <a href="#">
                     <i class="fas fa-shopping-cart">
                         <!--number-of-product-in cart-->
-                        <span class="num-cart-product">0</span>
+                        <span id="cart" class="num-cart-product">0</span>
                     </i>
                 </a>
             </div>
@@ -271,7 +272,7 @@
               <!--product box 1-->
               <div class="product-box">
                 <div class="product-img">
-                    <a href="#" class="add-cart">
+                    <a href="javascript:void(0);" class="add-cart" onclick="addToCart()">
                         <i class="fas fa-shopping-cart"></i>
                     </a>
                     <img src="images/p-1.png" />
@@ -285,7 +286,7 @@
             <!--product box 2-->
               <div class="product-box">
                 <div class="product-img">
-                    <a href="#" class="add-cart">
+                    <a href="javascript:void(0);" class="add-cart" onclick="addToCart()">
                         <i class="fas fa-shopping-cart"></i>
                     </a>
                     <img src="images/p-1.png" />
@@ -298,7 +299,7 @@
               <!--product box 3-->
               <div class="product-box">
                 <div class="product-img">
-                    <a href="#" class="add-cart">
+                    <a href="javascript:void(0);" class="add-cart" onclick="addToCart()">
                         <i class="fas fa-shopping-cart"></i>
                     </a>
                     <img src="images/p-1.png" />
@@ -311,59 +312,59 @@
               <!--product box 4-->
               <div class="product-box">
                 <div class="product-img">
-                    <a href="#" class="add-cart">
+                    <a href="javascript:void(0);" class="add-cart" onclick="addToCart()">
                         <i class="fas fa-shopping-cart"></i>
                     </a>
                     <img src="images/p-1.png" />
                 </div>
                 <div class="product-details">
-                    <a href="#">Simple T-Shirt</a>
+                    <a href="javascript:void(0);">Simple T-Shirt</a>
                     <span class="p-price">$22.00</span>
                 </div>
               </div>
               <!--product box 5-->
               <div class="product-box">
                 <div class="product-img">
-                    <a href="#" class="add-cart">
+                    <a href="javascript:void(0);" class="add-cart" onclick="addToCart()">
                         <i class="fas fa-shopping-cart"></i>
                     </a>
                     <img src="images/p-1.png" />
                 </div>
                 <div class="product-details">
-                    <a href="#">Simple T-Shirt</a>
+                    <a href="javascript:void(0);">Simple T-Shirt</a>
                     <span class="p-price">$22.00</span>
                 </div>
               </div>
               <!--product box 6-->
               <div class="product-box">
                 <div class="product-img">
-                    <a href="#" class="add-cart">
+                    <a href="javascript:void(0);" class="add-cart" onclick="addToCart()">
                         <i class="fas fa-shopping-cart"></i>
                     </a>
                     <img src="images/p-1.png" />
                 </div>
                 <div class="product-details">
-                    <a href="#">Simple T-Shirt</a>
+                    <a href="javascript:void(0);">Simple T-Shirt</a>
                     <span class="p-price">$22.00</span>
                 </div>
               </div>
               <!--product box 7-->
               <div class="product-box">
                 <div class="product-img">
-                    <a href="#" class="add-cart">
+                    <a href="javascript:void(0);" class="add-cart" onclick="addToCart()">
                         <i class="fas fa-shopping-cart"></i>
                     </a>
                     <img src="images/p-1.png" />
                 </div>
                 <div class="product-details">
-                    <a href="#">Simple T-Shirt</a>
+                    <a href="javascript:void(0);">Simple T-Shirt</a>
                     <span class="p-price">$22.00</span>
                 </div>
               </div>
             <!--product box 8-->
               <div class="product-box">
                 <div class="product-img">
-                    <a href="#" class="add-cart">
+                    <a href="javascript:void(0);" class="add-cart" onclick="addToCart()">
                         <i class="fas fa-shopping-cart"></i>
                     </a>
                     <img src="images/p-1.png" />
@@ -419,7 +420,7 @@
               <!--product box 1-->
               <div class="product-box">
                 <div class="product-img">
-                    <a href="#" class="add-cart">
+                    <a href="javascript:void(0);" class="add-cart" onclick="addToCart()">
                         <i class="fas fa-shopping-cart"></i>
                     </a>
                     <img src="images/p-1.png" />
@@ -433,7 +434,7 @@
             <!--product box 2-->
               <div class="product-box">
                 <div class="product-img">
-                    <a href="#" class="add-cart">
+                    <a href="javascript:void(0);" class="add-cart" onclick="addToCart()">
                         <i class="fas fa-shopping-cart"></i>
                     </a>
                     <img src="images/p-1.png" />
@@ -446,7 +447,7 @@
               <!--product box 3-->
               <div class="product-box">
                 <div class="product-img">
-                    <a href="#" class="add-cart">
+                    <a href="javascript:void(0);" class="add-cart" onclick="addToCart()">
                         <i class="fas fa-shopping-cart"></i>
                     </a>
                     <img src="images/p-1.png" />
@@ -459,7 +460,7 @@
               <!--product box 4-->
               <div class="product-box">
                 <div class="product-img">
-                    <a href="#" class="add-cart">
+                    <a href="javascript:void(0);" class="add-cart" onclick="addToCart()">
                         <i class="fas fa-shopping-cart"></i>
                     </a>
                     <img src="images/p-1.png" />
@@ -586,5 +587,6 @@
 
     
     </script>
+
 </body>
 </html>
